# AdCommentDisablerBot

./: .gitignore  README.md  docker-compose.yml  env-sample.toml  pyproject.toml
api/: __init__.py  is_post_ad.py  misc.py
config/: env.py
filters/: __init__.py  is_forwarded_from_linked_channel.py  misc.py
handlers/: __init__.py  clean_comments.py  disable_comments.py  errors.py
models/: documents.py
src/: commands.py
src/config/: env.py
src/filters/: misc.py
src/handlers/for_chat_admins/: __init__.py  allowed_links.py
src/keyboards/: __init__.py  manage_links.py
src/texts/: misc.py
texts/: misc.py
